fixed subprocess buffer bug

--- a/writeup/hw4template.tex
+++ b/writeup/hw4template.tex
@@ -59,8 +59,8 @@ In section 5 we analyze the results and discuss any causes for non-optimal speed
 
 The abstract dataset generator program we have developed to test the capabilities of RSVP consists of several steps.
 In step one, we create a set of N 3-dimensional coordinates that form a wire-frame cube.  We then add on a few more 
-dimensions of uniform random noise.  After step one, we have a starting dataset of six dimensions, three of which form 
-coordinates for a wire-frame cube and three of which are random noise. 
+dimensions of uniform random noise.  After step one, we have a starting dataset of six dimensions, 
+three of which form coordinates for a wire-frame cube and three of which are random noise. 
 
 In step two, we apply a random six-dimensional rotation to our starting dataset.  After the random rotation, we have 
 our simulated dataset.  Visualizations of the simulated dataset should only show noise; we have hidden our 
